Fixed modeling metrics and finalize tree/random forest comparison for diabetes projection

--- a/Modeling.qmd
+++ b/Modeling.qmd
@@ -13,9 +13,12 @@ library(tidyverse)
 library(ggplot2)
 library(tidymodels)
 library(rpart.plot)
+library(future)
 ```
 
-You can add options to executable code like this
+```{r}
+plan(multisession, workers = 4)  
+```
 
 ```{r}
 health_data <- read_csv("data/diabetes_binary_health_indicators_BRFSS2015.csv")
@@ -154,9 +157,11 @@ tree_wkf <- workflow() |>
 Fit the model with tune_grid() and grid_regular()
 
 ```{r}
-tree_grid <- grid_regular(cost_complexity(),
-                          tree_depth(),
-                          levels = c(10,5))
+tree_grid <- grid_regular(
+  cost_complexity(),
+  tree_depth(),
+  levels = 5
+)
 ```
 
 ```{r}
@@ -188,31 +193,38 @@ Evaluate the model on the test set \# TRy
 
 ```{r}
 tree_pred <- predict(final_tree, diabetes_test, type = "prob") |>
-  bind_cols(diabetes_test |>
-              select(Diabetes_binary))
-tree_pred
+  bind_cols(diabetes_test |> select(Diabetes_binary))
+
+print(tree_pred)
 ```
 
-log-loss on test data
+log loss on test data
 
 ```{r}
-print(tree_pred)
-tree_log_loss <- mn_log_loss(tree_pred, truth = Diabetes_binary, .pred_1)
+
+# Log-loss
+tree_log_loss <- mn_log_loss(
+  tree_pred,
+  truth = Diabetes_binary,
+  .pred_Diabetes
+) %>% pull(.estimate)
 print(tree_log_loss)
+
 ```
 
 Convert to class labels with 0.5 threshold and compute accuracy:
 
 ```{r}
+# Class labels using 0.5 threshold on Diabetes prob
 tree_final_predictions <- tree_pred |>
   mutate(
     .pred_class = if_else(
-    .pred_Diabetes > 0.5,
-    "Diabetes",
-    "NoDiabetes"
-  ),
-  .pred_class = factor(.pred_class, levels = levels(Diabetes_binary))
-)
+      .pred_Diabetes > 0.5,
+      "Diabetes",
+      "NoDiabetes"
+    ),
+    .pred_class = factor(.pred_class, levels = levels(Diabetes_binary))
+  )
 
 tree_final_metrics <- yardstick::metrics(
   tree_final_predictions,
@@ -230,13 +242,13 @@ tree_final_metrics
 
 ```{r}
 rf_spec <- rand_forest(mtry = tune(),
-                       trees = 1000, 
+                       trees = 100, 
                        min_n = tune()) |>
-  set_engine("ranger") |>
+  set_engine("ranger", importance = "impurity") |>
   set_mode("classification")
 ```
 
-Create our workflow
+Create the workflow
 
 ```{r}
 rf_wkf <- workflow() |>
@@ -258,15 +270,8 @@ rf_fit <- rf_wkf |>
 rf_fit
 ```
 
-Collect and view metrics
-
 ```{r}
-# rf_fit |>
-#   collect_metrics() |>
-#   filter(.metric == "mn_log_loss") |>
-#   arrange(mean)
 
-#print(rf_metrics)
 ```
 
 Let's see which tuning parameters is best
@@ -291,88 +296,60 @@ rf_final_fit <- rf_final_wkf |>
 rf_final_fit
 ```
 
-Collect metrics for the final model
-
 ```{r}
-rf_final_metrics <- rf_final_fit |>
-  collect_metrics()
 
-rf_final_metrics
 ```
 
-### 
+```{r}
+final_rf_full <- rf_wkf |>
+  finalize_workflow(rf_best_params) |>
+  fit(data = health_data)
+
+saveRDS(final_rf_full, file = "data/final_rf_full.rds")
+```
 
 -   Decision Tree Test set performance
 
 ```{r}
-# Get predicted probabilities
-tree_final_predictions <- final_tree |>
-   predict(diabetes_test, type = "prob") |>
-   bind_cols(diabetes_test |> select(Diabetes_binary))
-
-# Convert predicted probabilities to class labels (threshold at 0.5)
- tree_final_predictions <- tree_final_predictions |>
-   mutate(.pred_class = ifelse(.pred_1 > 0.5, "1", "0"))
-
-# Convert the class labels into factors for accuracy calculation
- tree_final_predictions <- tree_final_predictions |>
-   mutate(.pred_class = factor(.pred_class, levels = c("0", "1")))
-
-# Now calculate metrics
- tree_final_metrics <- yardstick::metrics(
-   tree_final_predictions,   truth = Diabetes_binary,
-   estimate = .pred_class
-
-)
-
-# View metrics
-tree_final_metrics
-```
-
-```{r}
-# # Evaluation of Decision Tree
-# tree_pred <- predict(final_tree, diabetes_test, type = "prob") |>
-#   bind_cols(diabetes_test %>% select(Diabetes_binary))
-# 
-#tree_log_loss <- mn_log_loss(tree_pred, truth = Diabetes_binary, .pred_1)
-# 
-# # Evaluation of Random Forest
-# rf_pred <- predict(rf_final_fit, diabetes_test, type = "prob") |>
-#   bind_cols(diabetes_test %>% select(Diabetes_binary))
-# 
-# # Log loss for Random Forest
-# rf_log_loss <- mn_log_loss(rf_pred, truth = Diabetes_binary, .pred_1)
-# 
 
 ```
 
 ```{r}
 
-# Calculate Log-Loss for Decision Tree
-tree_log_loss <- mn_log_loss(tree_pred, truth = Diabetes_binary, .pred_1)
+```
 
-# Extract the finalized workflow from last_fit() 
+```{r}
+
+# Extract the finalized RF workflow from last_fit()
 rf_workflow_extracted <- extract_workflow(rf_final_fit)
 
 # Predict probabilities on the test set
 rf_pred <- predict(rf_workflow_extracted, diabetes_test, type = "prob") |>
   bind_cols(diabetes_test %>% select(Diabetes_binary))
 
-# Calculate Log-Loss for the Random Forest Model
-rf_log_loss <- mn_log_loss(rf_pred, truth = Diabetes_binary, .pred_1)
+# Log-loss for Random Forest (test set)
+rf_log_loss <- mn_log_loss(
+  rf_pred,
+  truth = Diabetes_binary,
+  .pred_Diabetes
+) %>% pull(.estimate)
 
-# Convert predicted probabilities to class labels for accuracy evaluation
+# Convert RF predicted probabilities to class labels for accuracy evaluation
 rf_pred <- rf_pred |>
-  mutate(.pred_class = ifelse(.pred_1 > 0.5, "1", "0")) |>
-  mutate(.pred_class = factor(.pred_class, levels = c("0", "1")))
+  mutate(
+    .pred_class = if_else(
+      .pred_Diabetes > 0.5,
+      "Diabetes",
+      "NoDiabetes"
+    ),
+    .pred_class = factor(.pred_class, levels = levels(Diabetes_binary))
+  )
 
-# Evaluate metrics (accuracy, etc.)
+# Evaluate RF metrics
 rf_metrics <- rf_pred |>
   yardstick::metrics(truth = Diabetes_binary, estimate = .pred_class)
 
-# Print metrics
-print(rf_metrics)
-
+rf_metrics
 
 ```
 
@@ -398,62 +375,121 @@ rf_final_metrics <- rf_final_fit |>
 rf_final_metrics
 ```
 
+Collect and view matrics
+
+```{r}
+ rf_fit |>
+   collect_metrics() |>
+   filter(.metric == "mn_log_loss") |>
+   arrange(mean)
+
+print(rf_metrics)
+```
+
 ### Compare Performance
 
 ```{r}
 # Combine Metrics into a DataFrame for Comparison
+# Combine Metrics into a DataFrame for Comparison
 model_comparison <- tibble(
   Model = c("Decision Tree", "Random Forest"),
-  Accuracy = c(tree_final_metrics |> filter(.metric == "accuracy") |> pull(.estimate),
-               rf_final_metrics |> filter(.metric == "accuracy") |> pull(.estimate)),
-  Log_Loss = c(tree_final_metrics |> filter(.metric =="mn_log_loss") |> pull(.estimate),
-               rf_final_metrics |> filter(.metric =="mn_log_loss") |> pull(.estimate))
+  Accuracy = c(
+    tree_final_metrics |> filter(.metric == "accuracy") |> pull(.estimate),
+    rf_metrics         |> filter(.metric == "accuracy")         |> pull(.estimate)
+  ),
+  Log_Loss = c(
+    tree_log_loss,
+    rf_log_loss
+  )
 )
 
 print(model_comparison)
 
-```
-
-```{r}
 # Declare winner based on log-loss
-# Calculate log-loss
-tree_log_loss <- mn_log_loss(tree_pred, truth = Diabetes_binary, .pred_1) %>% pull(.estimate)
-rf_log_loss <- mn_log_loss(rf_pred, truth = Diabetes_binary, .pred_1) %>% pull(.estimate)
-print(tree_log_loss)
-print(rf_log_loss)
-# Declare winner
 if (tree_log_loss < rf_log_loss) {
   winner <- "Decision Tree"
 } else {
   winner <- "Random Forest"
 }
 
-# Print the winner
-cat("The best model is:", winner)
+print(winner)
+
+
+```
+
+```{r}
+# Declare winner based on log-loss
+model_comparison <- tibble(
+  Model = c("Decision Tree", "Random Forest"),
+  Accuracy = c(
+    tree_final_metrics |> filter(.metric == "accuracy") |> pull(.estimate),
+    rf_metrics         |> filter(.metric == "accuracy")         |> pull(.estimate)
+  ),
+  Log_Loss = c(
+    tree_log_loss,
+    rf_log_loss
+  )
+)
+
+
+if (tree_log_loss < rf_log_loss) {
+  winner <- "Decision Tree"
+} else {
+  winner <- "Random Forest"
+}
+print(winner)
 
 ```
 
 Plot the variable importance
 
 ```{r}
-# bag_final_model <- extract_fit_engine(rf_final_fit)
-# bag_final_model$imp |>
-#   mutate(term = factor(term, levels = term)) |> 
-#   ggplot(aes(x = term, y = value)) + geom_bar(stat ="identity") +
-#   coord_flip()
+
+# 1. Extract the underlying ranger engine from your FULL model
+rf_engine <- extract_fit_engine(final_rf_full)  # or whatever your full RF workflow is
+
+# 2. Get importance as a named numeric vector
+vi <- rf_engine$variable.importance
+vi 
+# 3. Turn it into a tibble with *term* and *value* columns
+vi_df <- tibble(
+  term  = names(vi),
+  value = as.numeric(vi)
+)
+
+```
+
+```{r}
+colnames(vi_df)
+```
+
+```{r}
+vi_df |>
+  arrange(desc(value)) |>
+  mutate(term = factor(term, levels = rev(term))) |>
+  ggplot(aes(x = term, y = value)) +
+  geom_bar(stat = "identity", fill = "blue") +
+  coord_flip() +
+  labs(
+    title = "Variable Importance (Random Forest)",
+    x     = "Predictor",
+    y     = "Importance"
+  ) +
+  theme_minimal()
+
 ```
 
 ### Save the file for api
 
 ```{r}
-# # save the training data set
-# saveRDS(diabetes_train, file = "data/diabetes_train.rds")
-# 
-# # save the random forest tree model
-# saveRDS(rf_final_fit, file = "data/final_rf_model.rds")
-# 
-# #save the comparison metrics
-# saveRDS(model_comparison, file = "data/model_comparison.rds")
+# save the training data set
+ saveRDS(diabetes_train, file = "data/diabetes_train.rds")
+ 
+# save the random forest tree model
+ saveRDS(rf_final_fit, file = "data/final_rf_model.rds")
+ 
+# save the comparison metrics
+ saveRDS(model_comparison, file = "data/model_comparison.rds")
 ```
 
 ```{r}
